# GridapTrilinos.jl

./: .gitignore  Manifest.toml  Project.toml  README.md
.github/workflows/: CI.yml
ci/: build_trilinos.sh
scripts/: intro.jl
src/: GridapTrilinos.jl  TrilinosSolve.jl
src/Sharedlib/: CMakeLists.txt  CompleteSolve.cpp  TrilinosInterface.cpp  TrilinosSolve.cpp  TrilinosTypes.hpp  configure.sh  headers_and_helpers.hpp
test/: poisson_frosch.jl  poisson_frosch.xml  poisson_thyra.jl  poisson_thyra.xml  runtests.jl  transient_cached.jl
